# OS-Scheduler

./: README.md  schedule_psjf.c  schedule_rr.c  schedulers.h
hw1_2024/: CMakeLists.txt  cpu.c  cpu.h  driver.c  driver.h  example_list.txt  hw_list_1.txt  hw_list_2.txt  list.c  list.h  schedule_fcfs.c  schedule_sjf.c  task.h
