CMAKE_MINIMUM_REQUIRED (VERSION 3.0)

PROJECT(scheduler)

ADD_COMPILE_OPTIONS(-g -Wall)

SET (SRC_FILES cpu.c driver.c list.c)
  
ADD_EXECUTABLE(fcfs schedule_fcfs.c ${SRC_FILES})
ADD_EXECUTABLE(rr schedule_rr.c ${SRC_FILES})
ADD_EXECUTABLE(sjf schedule_sjf.c ${SRC_FILES})
ADD_EXECUTABLE(psjf schedule_psjf.c ${SRC_FILES})

SET (LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
SET (ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
SET (RUNTIME_OUTPUT_DIRECTORY "../")
